# GoogleAdsDumyAPI

./: .coverage  .gitignore  README.md  flake.nix  mvc.md  pyproject.toml  report.html  test_parser_report.html  todo.md
flake/: flake.nix
googleAdsDummy/: SeedSystem.py  __init__.py  _lexSearchQuery.py  _searchQueryParser.py  dataTableStategies.py  gad.py  types.py
googleAdsDummy/dataModels/: campaign.py
googleAdsDummy/engine/: generators.py  world.py
googleAdsDummy/models/: campaign.py  campaignMetrics.py  profiles.py  searchQuery.py
googleAdsDummy/query/: executor.py  handlers.py  searchQuery_schema.py
googleAdsDummy/searchQueryCompiler/: _lexerSearchQuery.py  _old_grammer_SearchQuery.txt  _parserSearchQuery.py  astNodes_SearchQuery.py  grammer_SearchQuery.txt  grammer_searchQuery.txt  lexer_SearchQuery.py  parser_SearchQuery.py  token_SearchQuery.py
tests/: debuging_test_gad.py  joker.py  manual_testing_gadAPI.py  printASTree.py  testVisual.py  test_anomaly_rules.py  test_date_period.py  test_debuging_parser.py  test_gad.py  test_parser.py  test_profile_rules.py
tests/learningTests/: test_learning_pydantic.py  test_learning_pytest.py  test_learning_pytestConv.py  test_learning_seedSystem.py
tests/utils/: printASTree.py
